responsive media queries mobile phone 900px

--- a/index.html
+++ b/index.html
@@ -10,8 +10,9 @@
     <section>
         <div class="circle"></div>
         <header>
-            <a href="#" class="logo"><img src="./images/logo.png"></a>
-            <ul>
+            <a href="index.html"><img src="./images/logo.png" class="logo"></a>
+            <div class="toggle" onclick="toggleMenu()"></div>
+            <ul class="navigation">
                 <li><a href="#">Home</a></li>
                 <li><a href="#">Menu</a></li>
                 <li><a href="#">What's New</a></li>
@@ -51,6 +52,14 @@
         function changeCircleColor (color) {
             const circle = document.querySelector('.circle');
             circle.style.background = color;
+        }
+
+        function toggleMenu(){
+            var menuToggle = document.querySelector('.toggle');
+            var navigation = document.querySelector('.navigation');
+            menuToggle.classList.toggle('active')
+            navigation.classList.toggle('active')
+
         }
     </script>
 </body>
